hphp/hack/test/typecheck/argument_unpacking/unpack_default_constructor.php.exp
File "unpack_default_constructor.php", line 8, characters 7-9:
This constructor expects no argument (Typing[4012])
