hphp/hack/test/typecheck/argument_unpacking/unpack_default_constructor.php
<?hh

class MyC {
}

function call_constructor(): void {
  $args = vec[1, 2, 3];
  new MyC(...$args);
}
